# Django-CICD-OC

./: .dockerignore  .env.example  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  README.rst  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
.circleci/: config.yml
docs/: about.rst  conf.py  development.rst  documentation.rst  index.rst  quick-start.rst
docs/development/: deployment.rst  development.rst  documentation.rst  test-suite.rst  testsuite.rst
docs/internal/: lettings-module.rst  modules.rst  profiles-module.rst  site-module.rst
lettings/: models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_auto_20240102_1018.py  0002_copy_lettings_data.py  0003_specify_plural.py
lettings/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_auto_20240102_1014.py  0002_delete_letting_and_address.py  0003_auto_20240102_1109.py  0003_delete_profile.py  0004_auto_20240102_1431.py  0005_delete_profile.py
oc_lettings_site/templates/oc_lettings_site/: index.html
oc_lettings_site/tests/: test_urls.py  test_views.py
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20240102_1433.py  0002_copy_profiles_data.py
profiles/tests/: conftest.py  test_models.py  test_urls.py  test_views.py
templates/: 404.html  500.html
